# flet_decimal_input

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: FletDecimalInput.md  index.md
examples/flet_decimal_input_example/: .gitignore  pyproject.toml
examples/flet_decimal_input_example/src/: main.py
src/flet_decimal_input/: __init__.py  flet_decimal_input.py
src/flutter/flet_decimal_input/: README.md  pubspec.yaml
src/flutter/flet_decimal_input/lib/: flet_decimal_input.dart
src/flutter/flet_decimal_input/lib/src/: create_control.dart  flet_decimal_input.dart
