[project]
name = "flet_decimal_input"
version = "0.0.1"
description = "FletDecimalInput control for Flet"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Flet contributors", email = "microdevprog@gmail.com" }
]
dependencies = [
    "flet>=0.28.3",
]

[project.urls]
Homepage = "https://usermicrodevices.github.io"
Documentation = "https://github.com/usermicrodevices/flet_decimal_input/wiki"
Repository = "https://github.com/usermicrodevices/flet_decimal_input"
Issues = "https://github.com/usermicrodevices/flet_decimal_input/issues"

[tool.setuptools.package-data]
"flutter.flet_decimal_input" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
