[project]
name = "flet-decimal-input-example"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "flet_decimal_input developer", email = "microdevprog@gmail.com" }
]
dependencies = [
  "flet_decimal_input @ git+https://github.com/usermicrodevices/flet_decimal_input",
  "flet>=0.28.3",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-decimal-input-example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MyCompany"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet_decimal_input = "../.." # relative path

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.uv.sources]
flet_decimal_input = { path = "../../", editable = true }

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
flet_decimal_input = {path = "../../", develop = true}
